@@ -7,9 +7,6 @@ internal class OutroEffect_Gun : WeaponEffect {
 	public override void SetStaticDefaults() {
 		Duration = ModUtils.ToSecond(30);
 	}
-	public override string ModifyTooltip() {
-		return string.Format(Tooltip, Duration);
-	}
 	public override void WeaponDamage(Player player, Item item, ref StatModifier damage) {
 		if (OutroEffectSystem.Get_Arr_WeaponTag[(int)WeaponTag.Gun].Contains(item.type)) {
 			damage += .15f;
