@@ -7,9 +7,6 @@ internal class OutroEffect_LesserDamage : WeaponEffect {
 	public override void SetStaticDefaults() {
 		Duration = ModUtils.ToSecond(20);
 	}
-	public override string ModifyTooltip() {
-		return string.Format(Tooltip, Duration);
-	}
 	public override void WeaponDamage(Player player, Item item, ref StatModifier damage) {
 		damage += .075f;
 	}
