@@ -1,0 +1,7 @@
+﻿using Roguelike.Texture;
+using Terraria.ModLoader;
+
+namespace Roguelike.Contents.Items.Guides;
+internal class RelicGuide : ModItem {
+	public override string Texture => ModTexture.NotePaper;
+}
