@@ -1,0 +1,10 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+using Terraria.UI;
+
+namespace Roguelike.Contents.Items.RelicItem;
+internal class RelicUIGuide : UIState {
+}
